# intextus-embed-ggml

./: .gitignore  CMakeLists.txt  LICENSE  README.md  accuracy_report.md  pyproject.toml
.github/workflows/: publish.yml
docs/dense_on/: accuracy_report.md
scripts/: benchmark_accuracy.py  evaluate_accuracy.py  increment_version.py  plot_benchmark.py
src/intextus/: __init__.py  _core.cpp  encoder.py
tests/: test_encoder.py
