[build-system]
requires = ["scikit-build-core>=0.5.0", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "intextus-embed-ggml"
version = "0.1.7"
description = "A lightweight, zero-PyTorch GGML/GGUF encoder for generic dense embedding models."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "bert",
    "bge",
    "ggml",
    "gguf",
    "llama.cpp",
    "embedding",
    "search",
    "information-retrieval",
    "vector-search",
    "zero-pytorch"
]
dependencies = [
    "numpy>=1.22.0",
    "huggingface-hub>=0.16.4"
]

[tool.scikit-build]
cmake.build-type = "Release"
# This tells scikit-build-core to look inside the 'src' directory for your python packages
wheel.packages = ["src/intextus"]
sdist.include = ["src/intextus/*", "CMakeLists.txt"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
benchmark = [
    "fastembed>=0.3.4",
]